# CS008-final

./: Application.cpp  Application.h  CMakeLists.txt  File.cpp  File.h  GUIComponent.cpp  GUIComponent.h  Letter.cpp  Letter.h  MultiText.cpp  MultiText.h  Node.h  TargetText.cpp  TargetText.h  TypingGame.cpp  TypingGame.h  list.cpp  list.h  main.cpp  menu.cpp  menu.h  points.cpp  points.h  text.txt  timer.cpp  timer.h  typinggame
